--- a/Formulario_de_Registro/client/index.html
+++ b/Formulario_de_Registro/client/index.html
@@ -3,10 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container-fluid d-flex">
+    <div class="form-container justify-content-center align-items-center">
+      test
+    </div>
+  </div>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
