--- a/Formulario_de_Registro/client/index.html
+++ b/Formulario_de_Registro/client/index.html
@@ -8,9 +8,13 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="container-fluid d-flex">
-    <div class="form-container justify-content-center align-items-center">
-      test
+  <div class="container-fluid d-flex min-vh-100 justify-content-center align-items-center p-0 m-0">
+    <div class="form-container mt-1 mb-1 p-2">
+      <label>Nombre</label>
+      <input placeholder="Nombre" id="input_nombre"/>
+
+      <label>Apellido</label>
+      <input placeholder="Nombre" id="input_nombre"/>
     </div>
   </div>
   <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
