--- a/Formulario_de_Registro/client/index.html
+++ b/Formulario_de_Registro/client/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container-fluid d-flex min-vh-100 justify-content-center align-items-center p-0 m-0">
-    <form class="form-container row g-3 p-4 border rounded shadow bg-white">
+    <form class="form-container row g-3 p-4 border rounded shadow bg-white" id="formulario">
       <!-- Columna izquierda -->
       <div class="col-md-6">
         <label for="input_identificacion" class="form-label">Número de identificación</label>
@@ -46,7 +46,7 @@
 
       <!-- Botón -->
       <div class="col-12 text-end">
-        <button type="submit" class="btn btn-primary mt-3">Enviar</button>
+        <button type="submit" class="btn btn-primary mt-3" id="btn">Enviar</button>
       </div>
     </form>
   </div>
